# perfect-prompt-api

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  PROJECT_SUMMARY.md  Procfile  README.md  docker-compose.yml  launcher.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
deploy/: CHATGPT_SETUP.md  chatgpt-integration-guide.md  chatgpt-schema.json  check_deployment.py  docker-entrypoint.sh  heroku-guide.md  privacy-policy.html  railway-guide.md  requirements-prod.txt  test_railway_api.py
examples/: basic_usage.py  simple_demo.py
perfect_prompt/: __init__.py
perfect_prompt/api/: __init__.py  client.py  server.py
perfect_prompt/core/: __init__.py  prompt_analyzer.py  prompt_optimizer.py
perfect_prompt/models/: __init__.py  prompt_model.py
tests/: __init__.py  test_analyzer.py
